--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>Connectsys. Index</title>
+<title>Connectsys. Contact</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="stylesheet" href="connectsys.css" type="text/css">
 <script language="JavaScript" type="text/JavaScript">
@@ -45,7 +45,7 @@ function MM_swapImage() { //v3.0
           <td><a href="services.html" onMouseOver="MM_swapImage('Nav Services','','nav3-services-over.jpg',1)" onMouseOut="MM_swapImgRestore()"><img src="nav3-services.jpg" name="Nav Services" width="94" height="36" border="0"></a></td>
           <td><a href="products.html" onMouseOver="MM_swapImage('Nav Products','','nav4-products-over.jpg',1)" onMouseOut="MM_swapImgRestore()"><img src="nav4-products.jpg" name="Nav Products" width="99" height="36" border="0"></a></td>
           <td><a href="about.html" onMouseOver="MM_swapImage('Nav About','','nav5-about-over.jpg',1)" onMouseOut="MM_swapImgRestore()"><img src="nav5-about.jpg" name="Nav About" width="99" height="36" border="0"></a></td>
-          <td><a href="contact.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Nav Contact','','nav6-contact-over.jpg',1)"><img src="nav6-contact.jpg" name="Nav Contact" width="95" height="36" border="0"></a></td>
+          <td><a href="contact.html" onMouseOver="MM_swapImage('Nav Contact','','nav6-contact-over.jpg',1)" onMouseOut="MM_swapImgRestore()"><img src="nav6-contact.jpg" name="Nav Contact" width="95" height="36" border="0"></a></td>
           <td><img src="nav7.jpg" width="132" height="36"></td>
         </tr>
       </table></td>
@@ -54,37 +54,63 @@ function MM_swapImage() { //v3.0
     <td><table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr> 
           <td width="25" class="leftbdr" border="0" cellspacing="0" cellpadding="0"></td>
-          <td width="737" bgcolor="CFDDE8">
-<table width="100%" border="0" cellspacing="0" cellpadding="0">
+          <td width="737" bgcolor="CFDDE8"> <table width="100%" border="0" cellspacing="0" cellpadding="0">
               <tr> 
                 <td width="3%" height="30">&nbsp;</td>
                 <td width="94%">&nbsp;</td>
                 <td width="3%">&nbsp;</td>
               </tr>
               <tr> 
-                <td>&nbsp;</td>
-                <td><p><font face="Arial, Helvetica, sans-serif"><strong></strong></font></p>
-                  <p><font face="Arial, Helvetica, sans-serif">Welcome to the 
-                    Connectsys Website. Please navigate our site 
-                    via the menus above and be sure to come back soon to see the 
-                    latest news on what Connectsys can offer you and your business 
-                    in I.T Solutions!</font></p>
-                  <p>&nbsp;</p>
-                  <p>&nbsp;</p>
-                  <p>&nbsp;</p>
-                  <p>&nbsp;</p>
-                  <p>&nbsp;</p>
-                  <p>&nbsp;</p></td>
-                <td>&nbsp;</td>
+                <td rowspan="12">&nbsp;</td>
+                <td height="15"> <blockquote> 
+                    <p><font face="Arial, Helvetica, sans-serif"><strong>Daniel 
+                      Cull</strong></font> <font face="Arial, Helvetica, sans-serif"><strong><font size="1" face="Arial, Helvetica, sans-serif">Director, Bachelor 
+                      Computer Science</font></strong></font></p>
+                  </blockquote></td>
+                <td rowspan="12">&nbsp;</td>
               </tr>
               <tr> 
+                <td height="10"> <blockquote> 
+                    <p><font size="2" face="Arial, Helvetica, sans-serif"><strong>SYSTEMS AND NETWORK ENGINEER</strong></font><font face="Arial, Helvetica, sans-serif"><strong></strong></font></p>
+                  </blockquote></td>
+              </tr>
+              <tr> 
+                <td height="15">&nbsp;</td>
+              </tr>
+              <tr> 
+                <td height="30"> <blockquote>
+<p><strong><font size="1" face="Arial, Helvetica, sans-serif">PHONE</font></strong></p>
+                  </blockquote></td>
+              </tr>
+              <tr> 
+                <td height="15"> <blockquote><font size="2" face="Arial, Helvetica, sans-serif"><strong>021 797 330</strong></font></blockquote></td>
+              </tr>
+                            <tr> 
+                <td height="25"> <blockquote> 
+                    <p><font size="1" face="Arial, Helvetica, sans-serif"><strong>EMAIL</strong></font></p>
+                  </blockquote></td>
+              </tr>
+              <tr> 
+                <td height="15"> <blockquote><strong><font color="#000000" size="2" face="Arial, Helvetica, sans-serif">daniel.cull@connectsys.co.nz</font></strong></blockquote></td>
+              </tr>
+             <td height="25"> <blockquote> 
+                    <p><font size="1" face="Arial, Helvetica, sans-serif"><strong>ADDRESS</strong></font></p>
+                  </blockquote></td>
+              </tr>
+              <tr> 
+                <td height="15"> <blockquote><strong><font color="#000000" size="2" face="Arial, Helvetica, sans-serif">PO 
+                    BOX 104273, Lincoln North, Auckland, New Zealand 0654</font></strong></blockquote></td>
+              </tr>
+              <tr> 
+                <td height="19">
+<blockquote>
+                    <p><strong></strong></p>
+                  </blockquote></td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
-                <td>&nbsp; </td>
               </tr>
             </table>
-            
-          </td>
+            <p>&nbsp;</p></td>
           <td width="34" align="right" class="rightbdr">&nbsp;</td>
         </tr>
       </table></td>
