--- a/services.html
+++ b/services.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>Connectsys. Index</title>
+<title>Connectsys. Contact</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="stylesheet" href="connectsys.css" type="text/css">
 <script language="JavaScript" type="text/JavaScript">
@@ -45,7 +45,7 @@ function MM_swapImage() { //v3.0
           <td><a href="services.html" onMouseOver="MM_swapImage('Nav Services','','nav3-services-over.jpg',1)" onMouseOut="MM_swapImgRestore()"><img src="nav3-services.jpg" name="Nav Services" width="94" height="36" border="0"></a></td>
           <td><a href="products.html" onMouseOver="MM_swapImage('Nav Products','','nav4-products-over.jpg',1)" onMouseOut="MM_swapImgRestore()"><img src="nav4-products.jpg" name="Nav Products" width="99" height="36" border="0"></a></td>
           <td><a href="about.html" onMouseOver="MM_swapImage('Nav About','','nav5-about-over.jpg',1)" onMouseOut="MM_swapImgRestore()"><img src="nav5-about.jpg" name="Nav About" width="99" height="36" border="0"></a></td>
-          <td><a href="contact.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Nav Contact','','nav6-contact-over.jpg',1)"><img src="nav6-contact.jpg" name="Nav Contact" width="95" height="36" border="0"></a></td>
+          <td><a href="contact.html" onMouseOver="MM_swapImage('Nav Contact','','nav6-contact-over.jpg',1)" onMouseOut="MM_swapImgRestore()"><img src="nav6-contact.jpg" name="Nav Contact" width="95" height="36" border="0"></a></td>
           <td><img src="nav7.jpg" width="132" height="36"></td>
         </tr>
       </table></td>
@@ -59,19 +59,22 @@ function MM_swapImage() { //v3.0
               <tr> 
                 <td width="3%" height="30">&nbsp;</td>
                 <td width="94%">&nbsp;</td>
-                <td width="3%">&nbsp;</td>
+                <td width="3%" height="30">&nbsp;</td>
               </tr>
               <tr> 
                 <td>&nbsp;</td>
-                <td><p><font face="Arial, Helvetica, sans-serif"><strong></strong></font></p>
-                  <p><font face="Arial, Helvetica, sans-serif">Welcome to the 
-                    Connectsys Website. Please navigate our site 
-                    via the menus above and be sure to come back soon to see the 
-                    latest news on what Connectsys can offer you and your business 
-                    in I.T Solutions!</font></p>
-                  <p>&nbsp;</p>
-                  <p>&nbsp;</p>
-                  <p>&nbsp;</p>
+                <td><p><strong><font face="Arial, Helvetica, sans-serif">Connectsys 
+                    can provide a range of I.T. services to your small or medium 
+                    sized business, drawing on expertise with;</font></strong><font face="Arial, Helvetica, sans-serif"></font></p>
+                  <ul>
+                    <li><font face="Arial, Helvetica, sans-serif">Network and Server Tailored Solutions and Support</font></li>
+                    <li><font face="Arial, Helvetica, sans-serif">Autonomy Livevault Auckland Online Backups </font></li>
+                    <li><font face="Arial, Helvetica, sans-serif">Hardware and Software Sales</font></li>
+                    <li><font face="Arial, Helvetica, sans-serif">ADSL, Wireless, Fibre, Configuration and Support</font></li>
+                    <li><font face="Arial, Helvetica, sans-serif">VPN Solutions</font></li>
+                    <li><font face="Arial, Helvetica, sans-serif">Mako Firewall Sales Setup and Support</font></li>
+                    <li><font face="Arial, Helvetica, sans-serif">Hosted Exchange 2010 Based in Auckland</font></li>
+                  </ul>
                   <p>&nbsp;</p>
                   <p>&nbsp;</p>
                   <p>&nbsp;</p></td>
@@ -80,7 +83,7 @@ function MM_swapImage() { //v3.0
               <tr> 
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
-                <td>&nbsp; </td>
+                <td>&nbsp;</td>
               </tr>
             </table>
             
