--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                         <div class="block-right">
                             <div class="contact-area">
                                 <ul>
-                                    <li><i class="fa fa-phone-square"></i>021 797 330</li>
-                                    <li><i class="fa fa-envelope-o"></i>daniel@connectsys.co.nz</li>
+                                    <li><i class="fa fa-phone-square"></i>(+64) 021 797 330</li>
+                                    <li><i class="fa fa-envelope-o"></i>contact&#64;connectsys&#46;co&#46;nz</li>
                                 </ul>
                             </div>
                         </div>
