--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
                                 <div class="slider-text">
                                     <h2>Connectsys Ltd <br></h2> 
                                     <p class="sub-slider-text">IT Support and Sales</p>
-                                    <p class="slider-p">Connectsys provides IT services to around 20 Companies in Auckland <br>
-                                    Please contact Daniel for any enquiries <br>
-                                    PO BOX 104-273 Lincoln North, Auckland, New Zealand.</p>
+                                    <p class="slider-p">Since 2007 Connectsys provides IT services to around 20 Companies in Auckland <br>
+                                    PO BOX 104-273 Lincoln North, Auckland, New Zealand.<br>
+									Please contact Daniel for any enquiries </p>
                                 </div>
                             </div>
                         </div>
