--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <div class="contact-area">
                                 <ul>
                                     <li><i class="fa fa-phone-square"></i>(+64) 021 797 330</li>
-                                    <li><i class="fa fa-envelope-o"></i>contact&#64;connectsys&#46;co&#46;nz</li>
+                                    <li><i class="fa fa-envelope-o"></i>contactat&#64;connectsys&#46;co&#46;nz</li>
                                 </ul>
                             </div>
                         </div>
