--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
-		<meta name="robots" content="noindex">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Connectsys</title>
@@ -104,12 +103,7 @@
                                     <h2>Connectsys Ltd <br></h2> 
                                     <p class="sub-slider-text">IT Support and Sales</p>
                                     <p class="slider-p">Since 2007 Connectsys provides IT services to around 20 Companies in Auckland <br>
-                                    Please contact Daniel for any enquiries
-									Thankyou
-									Daniel Cull
-									21 Fleetwood Drive, Henderson, Auckland 0612
-									Mobile:  021 797 330
-									Email:  daniel@connectsys.co.nz or  daniel.cull@connectsys.co.nz</p>
+                                    Please contact Daniel for any enquiries </p>
                                 </div>
                             </div>
                         </div>
